--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 LoginCreds.md
+GoogleMapsData.js
 
 # User-specific files
 *.rsuser
